<resources>

    //app name
    <string name="app_name">Github Browser</string>

    //general strings
    <string name="no_internet">No Internet Access</string>
    <string name="time_out">Time Out, Slow Network</string>
    <string name="check_network">or Check Network Connectivity</string>

    //activities headings
    <string name="github_browser">Github Browser</string>
    <string name="add_repo">Add Repo</string>
    <string name="details">Details</string>
    <string name="commits">Commits</string>

    //content descriptions
    <string name="desc_add_repo_button">Add Repo</string>
    <string name="desc_back_button">Back Button</string>

    //repo card
    <string name="placeholder_repo_name">Repo Name</string>
    <string name="placeholder_repo_desc">Repo Desc</string>
    <string name="desc_send_repo_info">Send Repo\'s Info</string>

    //add repo activity
    <string name="owner_organization">Owner/Organization</string>
    <string name="repo_name">Repo Name</string>
    <string name="add_repo_button">ADD REPO</string>
    <string name="repo_not_found">Invalid Repo</string>

    //details activity
    <string name="details_repo_name">Repo Name:</string>
    <string name="details_repo_desc">Description:</string>
    <string name="details_branch_text">BRANCHES</string>
    <string name="details_issues_text">ISSUES(%s)</string>
    <string name="desc_delete_repo">Delete Repo Button</string>
    <string name="desc_open_repo">Open Repo Link Button</string>

    //branch fragment
    <string name="placeholder_branch_name">Branch Name</string>
    <string name="loading_branches">Loading Branches</string>

    //issue fragment
    <string name="text_issue_creator">Issue Creator</string>
    <string name="placeholder_issue">Issue</string>
    <string name="desc_issue_creator_avatar">Issue Creator Avatar</string>
    <string name="loading_issues">Loading Issues</string>
    <string name="no_issues">No Issues</string>

    //commits activity
    <string name="placeholder_commit_date">10 Mar 21</string>
    <string name="placeholder_commit_sha">sha code</string>
    <string name="placeholder_commit_message">Commit Message</string>
    <string name="placeholder_commit_user">Commit User</string>
    <string name="desc_commit_user_avatar">Commit User Image</string>
    <string name="loading_commits">Loading Commits</string>
</resources>