<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.DetailActivity">

        <ImageView
            android:id="@+id/back_button_details"
            style="@style/ActivitiesBackButton"
            android:contentDescription="@string/desc_back_button"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            style="@style/ActivitiesHeading"
            android:text="@string/details"
            app:layout_constraintStart_toEndOf="@+id/back_button_details"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/delete_repo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/desc_delete_repo"
            android:focusable="true"
            android:src="@drawable/ic_delete_repo"
            app:layout_constraintBottom_toBottomOf="@+id/open_repo_link_button"
            app:layout_constraintEnd_toStartOf="@+id/open_repo_link_button"
            app:layout_constraintTop_toTopOf="@+id/open_repo_link_button" />

        <ImageView
            android:id="@+id/open_repo_link_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:contentDescription="@string/desc_open_repo"
            android:focusable="true"
            android:src="@drawable/ic_open_repo_link"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/details_repo_name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16sp"
            android:text="@string/repo_name"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/details_repo_desc_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16sp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16sp"
            android:text="@string/placeholder_repo_desc"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_repo_name_text" />

        <androidx.cardview.widget.CardView
            android:id="@+id/details_branch_card_view"
            style="@style/DetailCardButtons"
            app:layout_constraintEnd_toStartOf="@+id/details_Issues_card_view"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_repo_desc_text">

            <TextView
                android:id="@+id/details_branches_text_view"
                style="@style/DetailTabHeadings"
                android:text="@string/details_branch_text" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/details_Issues_card_view"
            style="@style/DetailCardButtons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/details_branch_card_view"
            app:layout_constraintTop_toBottomOf="@+id/details_repo_desc_text">

            <TextView
                android:id="@+id/details_issue_text_view"
                style="@style/DetailTabHeadings"
                android:text="@string/details_issues_text" />
        </androidx.cardview.widget.CardView>

        <FrameLayout
            android:id="@+id/branch_frame_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_branch_card_view" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>